<package>
  <name>pytouchosc</name>
  <version>0.0.1</version>
  <description>

      PyTouchOSC is a Python module for interacting with *.touchosc layout files.  It
      provides a set of utilities for parsing tabpages and controls out of files created
      with the TouchOSC Editor application.

      Also included is a node for hosting layout files and transferring them to iOS devices.

  </description>
  <author>Michael Carroll</author>
  
  <maintainer email="mike@todo.com">Michael Carroll</maintainer>

  <license>BSD</license>


  <url>http://ros.org/wiki/pytouchosc</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pybonjour</build_depend>
  <build_depend>lxml</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosunit</run_depend>
  <run_depend>rostest</run_depend>
</package>


